[package]
name = "gf"
version = "1.0.0"
authors = ["Roman Kvasnytskyi <roman@kvasnytskyi.net>"]
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
atty = "0.2.14"
serde_json = "1.0.128"
dirs = "5.0.1"
colored = "2.1.0"
anyhow = "1.0.89"


[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
tempfile = "3.12.0"

[[bin]]
name = "gf"
path = "src/main.rs"
bench = true

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
